objects/Supporting_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>States whether the agreement is active or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Template</label>
        <referenceTo>Agreement_Template__c</referenceTo>
        <relationshipLabel>Supporting Agreements</relationshipLabel>
        <relationshipName>Supporting_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Supporting Agreements</relationshipLabel>
        <relationshipName>Supporting_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BCTRB_F_AAA_M_Aaa_S_P_AAA__c</fullName>
        <inlineHelpText>Bank collateral threshold Ratings Based - Fitch - &apos;AAA&apos;, Moody&apos;s - &apos;Aaa&apos;, Standard and Poor&apos;s - &apos;AAA&apos;</inlineHelpText>
        <label>BCTRB - F(AAA) - M(Aaa) - S&amp;P(AAA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCTRB_F_AA_M_Aa1_S_P_AA__c</fullName>
        <inlineHelpText>Bank collateral threshold Ratings Based - Fitch - &apos;AA+&apos;, Moody&apos;s - &apos;Aa1&apos;, Standard and Poor&apos;s - &apos;AA+&apos;</inlineHelpText>
        <label>BCTRB - F(AA+) - M(Aa1) - S&amp;P(AA+)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCTRB_F_AA_M_Aa2_S_P_AA__c</fullName>
        <inlineHelpText>Bank collateral threshold Ratings Based - Fitch - &apos;AA&apos;, Moody&apos;s - Aa2, Standard and Poor&apos;s - &apos;AA&apos;</inlineHelpText>
        <label>BCTRB - F(AA) - M(Aa2) - S&amp;P(AA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCTRB_F_AA_M_Aa3_S_P_AA__c</fullName>
        <inlineHelpText>Bank collateral threshold Ratings Based - Fitch - &apos;AA-&apos;, Moody&apos;s - &apos;Aa3&apos;, Standard and Poor&apos;s - &apos;AA-&apos;</inlineHelpText>
        <label>BCTRB - F(AA-) - M(Aa3) - S&amp;P(AA-)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCTRB_F_A_M_A1_S_P_A__c</fullName>
        <inlineHelpText>Bank collateral threshold Ratings Based - Fitch - &apos;A+&apos;, Moody&apos;s - &apos;A1&apos;, Standard and Poor&apos;s - &apos;A+&apos;</inlineHelpText>
        <label>BCTRB - F(A+) - M(A1) - S&amp;P(A+)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCTRB_F_A_M_A2_S_P_A__c</fullName>
        <inlineHelpText>Bank collateral threshold Ratings Based - Fitch - &apos;A&apos;, Moody&apos;s - &apos;A2&apos;, Standard and Poor&apos;s - &apos;A&apos;</inlineHelpText>
        <label>BCTRB - F(A) - M(A2) - S&amp;P(A)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCTRB_F_A_M_A3_S_P_A__c</fullName>
        <label>BCTRB - F(A-) - M(A3) - S&amp;P(A-)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCTRB_F_BBB_M_Baa1_S_P_BBB__c</fullName>
        <inlineHelpText>Bank collateral threshold Ratings Based - Fitch - &apos;BBB+&apos;, Moody&apos;s - &apos;Baa1&apos;, Standard and Poor&apos;s - &apos;BBB+&apos;</inlineHelpText>
        <label>BCTRB - F(BBB+) - M(Baa1) - S&amp;P(BBB+)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCTRB_F_BBB_M_Baa2_S_P_BBB__c</fullName>
        <inlineHelpText>Bank collateral threshold Ratings Based - Fitch - &apos;BBB&apos;, Moody&apos;s - &apos;Baa2&apos;, Standard and Poor&apos;s - &apos;BBB&apos;</inlineHelpText>
        <label>BCTRB - F(BBB) - M(Baa2) - S&amp;P(BBB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCTRB_F_BBB_M_Baa3_S_P_BBB__c</fullName>
        <inlineHelpText>Bank collateral threshold Ratings Based - Fitch - &apos;BBB-&apos;, Moody&apos;s - &apos;Baa3&apos;, Standard and Poor&apos;s - &apos;BBB-&apos;</inlineHelpText>
        <label>BCTRB - F(BBB-) - M(Baa3) - S&amp;P(BBB-)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCTRB_F_Below_B_M_Below_Ba1_S_P_A__c</fullName>
        <inlineHelpText>Bank collateral threshold Ratings Based - Fitch - &apos;Below B&apos;, Moody&apos;s - &apos;Below Ba1&apos;, Standard and Poor&apos;s - &apos;Below B&apos;</inlineHelpText>
        <label>BCTRB-F(BelowB)-M(BelowBa1)-S&amp;P(BelowB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Collateral_Threshold_Amount_Eligibl__c</fullName>
        <defaultValue>&quot;ZAR - South African Rand&quot;</defaultValue>
        <label>Bank Collateral Threshold Amount Eligi</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_Collateral_Threshold_Amount_Type__c</fullName>
        <label>Bank Collateral Threshold Amount Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Linked to Credit Rating</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Specified Amount</fullName>
                </value>
                <value>
                    <fullName>Zero</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_Collateral_Threshold_Fixed_Amount__c</fullName>
        <label>Bank Collateral Threshold Fixed Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Ind_Currency_Initial_Mg_Currency__c</fullName>
        <defaultValue>&quot;ZAR - South African Rand&quot;</defaultValue>
        <label>Bank IM/IA Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_Independent_Amount_Initial_Margin__c</fullName>
        <label>Bank IM/IA Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Independent_Amount_Type__c</fullName>
        <label>Bank IM/IA Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>As Per Agreement</fullName>
                </value>
                <value>
                    <fullName>As Per Transaction</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Specified Amount</fullName>
                </value>
                <value>
                    <fullName>Zero</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_Min_Transfer_Fixed_Amount__c</fullName>
        <label>Bank Min Transfer Fixed Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_Minimum_Transfer_Amount_Type__c</fullName>
        <label>Bank Minimum Transfer Amount Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>As Per Agreement</fullName>
                </value>
                <value>
                    <fullName>As Per Transaction</fullName>
                </value>
                <value>
                    <fullName>Linked to Credit Rating</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Specified Amount</fullName>
                </value>
                <value>
                    <fullName>Zero</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_Currency__c</fullName>
        <defaultValue>&quot;ZAR - South African Rand&quot;</defaultValue>
        <label>Base Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCTRB_F_AAA_M_Aaa_S_P_AAA__c</fullName>
        <inlineHelpText>Counterparty collateral threshold Ratings Based - Fitch - &apos;AAA&apos;, Moody&apos;s - &apos;Aaa&apos;, Standard and Poor&apos;s - &apos;AAA&apos;</inlineHelpText>
        <label>CCTRB - F(AAA) - M(Aaa) - S&amp;P(AAA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCTRB_F_AA_M_Aa1_S_P_AA__c</fullName>
        <inlineHelpText>Counterparty collateral threshold Ratings Based - Fitch - &apos;AA+&apos;, Moody&apos;s - &apos;Aa1&apos;, Standard and Poor&apos;s - &apos;AA+&apos;</inlineHelpText>
        <label>CCTRB - F(AA+) - M(Aa1) - S&amp;P(AA+)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCTRB_F_AA_M_Aa2_S_P_AA__c</fullName>
        <inlineHelpText>Counterparty collateral threshold Ratings Based - Fitch - &apos;AA&apos;, Moody&apos;s - Aa2, Standard and Poor&apos;s - &apos;AA&apos;</inlineHelpText>
        <label>CCTRB - F(AA) - M(Aa2) - S&amp;P(AA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCTRB_F_AA_M_Aa3_S_P_AA__c</fullName>
        <inlineHelpText>Counterparty collateral threshold Ratings Based - Fitch - &apos;AA-&apos;, Moody&apos;s - &apos;Aa3&apos;, Standard and Poor&apos;s - &apos;AA-&apos;</inlineHelpText>
        <label>CCTRB - F(AA-) - M(Aa3) - S&amp;P(AA-)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCTRB_F_A_M_A1_S_P_A__c</fullName>
        <inlineHelpText>Counterparty collateral threshold Ratings Based - Fitch - &apos;A+&apos;, Moody&apos;s - &apos;A1&apos;, Standard and Poor&apos;s - &apos;A+&apos;</inlineHelpText>
        <label>CCTRB - F(A+) - M(A1) - S&amp;P(A+)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCTRB_F_A_M_A2_S_P_A__c</fullName>
        <inlineHelpText>Counterparty collateral threshold Ratings Based - Fitch - &apos;A&apos;, Moody&apos;s - &apos;A2&apos;, Standard and Poor&apos;s - &apos;A&apos;</inlineHelpText>
        <label>CCTRB - F(A) - M(A2) - S&amp;P(A)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCTRB_F_A_M_A3_S_P_A__c</fullName>
        <inlineHelpText>Counterparty collateral threshold Ratings Based - Fitch - &apos;A-&apos;, Moody&apos;s - &apos;A3&apos;, Standard and Poor&apos;s - &apos;A-&apos;</inlineHelpText>
        <label>CCTRB - F(A-) - M(A3) - S&amp;P(A-)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCTRB_F_BBB_M_Baa1_S_P_BBB__c</fullName>
        <inlineHelpText>Counterparty collateral threshold Ratings Based - Fitch - &apos;BBB+&apos;, Moody&apos;s - &apos;Baa1&apos;, Standard and Poor&apos;s - &apos;BBB+&apos;</inlineHelpText>
        <label>CCTRB - F(BBB+) - M(Baa1) - S&amp;P(BBB+)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCTRB_F_BBB_M_Baa2_S_P_BBB__c</fullName>
        <inlineHelpText>Counterparty collateral threshold Ratings Based - Fitch - &apos;BBB&apos;, Moody&apos;s - &apos;Baa2&apos;, Standard and Poor&apos;s - &apos;BBB&apos;</inlineHelpText>
        <label>CCTRB - F(BBB) - M(Baa2) - S&amp;P(BBB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCTRB_F_BBB_M_Baa3_S_P_BBB__c</fullName>
        <inlineHelpText>Counterparty collateral threshold Ratings Based - Fitch - &apos;BBB-&apos;, Moody&apos;s - &apos;Baa3&apos;, Standard and Poor&apos;s - &apos;BBB-&apos;</inlineHelpText>
        <label>CCTRB - F(BBB-) - M(Baa3) - S&amp;P(BBB-)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCTRB_F_BelowB_M_BelowBa1_S_P_BelowB__c</fullName>
        <inlineHelpText>Counterparty collateral threshold Ratings Based - Fitch - &apos;Below B&apos;, Moody&apos;s - &apos;Below Ba1&apos;, Standard and Poor&apos;s - &apos;Below B&apos;</inlineHelpText>
        <label>CCTRB-F(BelowB)-M(BelowBa1)-S&amp;P(BelowB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSA_Type__c</fullName>
        <label>CSA Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outright transfer</fullName>
                </value>
                <value>
                    <fullName>Pledge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSA_Version__c</fullName>
        <label>CSA Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CSA</fullName>
                </value>
                <value>
                    <fullName>IM CSA</fullName>
                </value>
                <value>
                    <fullName>VM CSA</fullName>
                </value>
                <value>
                    <fullName>Triparty CSA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Frequency__c</fullName>
        <label>Call Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Frequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collateral_type__c</fullName>
        <label>Bilateral / Unilateral</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Collateral</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Counterparty_Collateral_T_Amount_Type__c</fullName>
        <label>Counterparty Collateral Threshold Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Linked to Credit Rating</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Specified Amount</fullName>
                </value>
                <value>
                    <fullName>Zero</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Counterparty_Collateral_Threshold_Amount__c</fullName>
        <label>Counterparty Collateral Threshold Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Counterparty_Collateral_Threshold_Fixed__c</fullName>
        <defaultValue>&quot;ZAR - South African Rand&quot;</defaultValue>
        <label>Counterparty Collateral Threshold Fixed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Counterparty_Ind_Amount_Initial_Margin__c</fullName>
        <description>Counterparty Ind Amount / Initial Margin</description>
        <inlineHelpText>Counterparty Independent Amount / Initial Margin</inlineHelpText>
        <label>Counterparty IM/IA Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Counterparty_Ind_Curr_Initial_Mg_Curr__c</fullName>
        <defaultValue>&quot;ZAR - South African Rand&quot;</defaultValue>
        <label>Counterpary IM/IA Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Counterparty_Independent_Amount_Type__c</fullName>
        <label>Counterparty IM/IA Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>As Per Agreement</fullName>
                </value>
                <value>
                    <fullName>As Per Transaction</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Specified Amount</fullName>
                </value>
                <value>
                    <fullName>Zero</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Counterparty_Independent_Amount__c</fullName>
        <label>Counterparty Independent Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Counterparty_Min_Transfer_Amount_Type__c</fullName>
        <label>Counterparty Min Transfer Amount Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>As Per Transaction</fullName>
                </value>
                <value>
                    <fullName>Linked to Credit Rating</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Specified Amount</fullName>
                </value>
                <value>
                    <fullName>Zero</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Counterparty_Min_Transfer_Fixed_Amount__c</fullName>
        <label>Counterparty Min Transfer Fixed Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>The date on which the agreement was signed</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_interest_amount__c</fullName>
        <label>Date of interest amount</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dist_Int_Amount_Eligible_Currency__c</fullName>
        <defaultValue>&quot;ZAR - South African Rand&quot;</defaultValue>
        <inlineHelpText>Distribution and Interest Amount Eligible Currency</inlineHelpText>
        <label>Dist &amp; Int Amount Eligible Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dist_Int_Amount_Int_Ref_Rate__c</fullName>
        <inlineHelpText>Distribution and Interest Amount Interest Reference Rate</inlineHelpText>
        <label>Distribution and Interest Rate</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Federal Funds Overnight Rate</fullName>
                </value>
                <value>
                    <fullName>SFX ZAR OND</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eligible_Collateral_Type__c</fullName>
        <label>Eligible Collateral Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Collateral_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eligible_Collateral__c</fullName>
        <label>Eligible Collateral</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Bonds Securities</fullName>
                </value>
                <value>
                    <fullName>Equities</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eligible_Currency__c</fullName>
        <label>Eligible Currency</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HotDocs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HotDocs?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Margin_Calculation_Method__c</fullName>
        <label>IM/IA Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ISDA SIMM</fullName>
                </value>
                <value>
                    <fullName>Standard CSA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_HotDocs_Answer_Set_ID__c</fullName>
        <label>Last HotDocs Answer Set ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Agreement_Type__c</fullName>
        <label>Master Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GMRA Agreement</fullName>
                </value>
                <value>
                    <fullName>GMSLA Agreement</fullName>
                </value>
                <value>
                    <fullName>ISDA Agreement</fullName>
                </value>
                <value>
                    <fullName>Prime Services Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Agreement__c</fullName>
        <label>Other Agreement</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Eligible_Collateral_Type__c</fullName>
        <label>Other Eligible Collateral Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Regulatory_Collateral_Type__c</fullName>
        <label>Other Regulatory Collateral Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Valuation_Agent__c</fullName>
        <label>Other Valuation Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regulatory_Collateral_Type__c</fullName>
        <label>Regulatory Collateral Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Collateral_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rehypothecation__c</fullName>
        <label>Rehypothecation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Absa_Own_Amount__c</fullName>
        <label>Own Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Counterparty_Own_Amount__c</fullName>
        <label>Own Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Security_Chargor__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <label>Security Chargor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>Counterparty</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Obligation_to_Absa__c</fullName>
        <label>Security Obligation to Absa</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Zero</fullName>
                </value>
                <value>
                    <fullName>Infinity</fullName>
                </value>
                <value>
                    <fullName>Own Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Obligation_to_Counterparty__c</fullName>
        <label>Security Obligation to Counterparty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Zero</fullName>
                </value>
                <value>
                    <fullName>Infinity</fullName>
                </value>
                <value>
                    <fullName>Own Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Provider__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <label>Security Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>Counterparty</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Substitution__c</fullName>
        <label>Substitution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supporting_Agreement_Type__c</fullName>
        <label>Supporting Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Master_Agreement_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>2005 Master Give-up Agreement</fullName>
                </value>
                <value>
                    <fullName>ACS Terms of Business</fullName>
                </value>
                <value>
                    <fullName>Collateral Management Agency Agreement</fullName>
                </value>
                <value>
                    <fullName>Collateral Management Agreement</fullName>
                </value>
                <value>
                    <fullName>Credit Support Document</fullName>
                </value>
                <value>
                    <fullName>CSA</fullName>
                </value>
                <value>
                    <fullName>CSA (New York Law)</fullName>
                </value>
                <value>
                    <fullName>CSD</fullName>
                </value>
                <value>
                    <fullName>Global Netting Agreement</fullName>
                </value>
                <value>
                    <fullName>IM CSA</fullName>
                </value>
                <value>
                    <fullName>International Futures Terms of Business</fullName>
                </value>
                <value>
                    <fullName>IRC Client Agreement</fullName>
                </value>
                <value>
                    <fullName>ISDA Collateral Transfer Agreement / Euroclear Security</fullName>
                </value>
                <value>
                    <fullName>JSE IRC</fullName>
                </value>
                <value>
                    <fullName>JSE SAFEX</fullName>
                </value>
                <value>
                    <fullName>JSE Tripartite</fullName>
                </value>
                <value>
                    <fullName>JSE Yield X</fullName>
                </value>
                <value>
                    <fullName>Master Confirmation Agreement</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>SAFEX Clearing Agreement</fullName>
                </value>
                <value>
                    <fullName>SAFEX Client Agreement</fullName>
                </value>
                <value>
                    <fullName>SE Client Agreement</fullName>
                </value>
                <value>
                    <fullName>Service Level Agreement</fullName>
                </value>
                <value>
                    <fullName>Structured Deposit Master Agreement and Confirmation</fullName>
                </value>
                <value>
                    <fullName>Terms Of Business</fullName>
                </value>
                <value>
                    <fullName>Tri-Party CSA</fullName>
                </value>
                <value>
                    <fullName>VM CSA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_Currency__c</fullName>
        <label>Termination Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Exposure_Calculation_Method__c</fullName>
        <label>Transaction Exposure Calculation Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Method A</fullName>
                </value>
                <value>
                    <fullName>Method B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Triparty_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Triparty Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uncleared_Swaps_Margin_Indicator_UCSM__c</fullName>
        <label>Uncleared Swaps Margin Indicator (UCSM)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Pre Sept 2016</fullName>
                </value>
                <value>
                    <fullName>Post Sept 2016</fullName>
                </value>
                <value>
                    <fullName>Post Mar 2017</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valuation_Agent__c</fullName>
        <label>Valuation Agent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Valuation_Agent</valueSetName>
        </valueSet>
    </fields>
</CustomObject>